# quick_tutorial

./: README.md  day1.md  day2.l  day2.md  package.xml  quick_tutorial.rosinstall  rosinstall.melodic
launch/: common.launch  detect_kettle.launch  ditect_kettle.launch
launch/include/: fetch.launch.xml  head_camera.launch.xml  prepare_simulated_robot.py
urdf/: kettle.xacro
world/: tabletop.world
world/urdf/: kettle.gazebo  kettle.urdf
